--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "npm-run-all": "4.1.5",
     "react-addons-test-utils": "15.6.2",
+    "react-hot-loader": "^4.13.0",
     "react-test-renderer": "16.14.0",
     "replace": "1.2.1",
     "splashicon-generator": "0.2.12",
@@ -114,7 +115,7 @@
     "classnames": "2.3.1",
     "copy-text-to-clipboard": "1.0.4",
     "cozy-authentication": "2.8.3",
-    "cozy-bar": "7.20.3",
+    "cozy-bar": "8.9.2",
     "cozy-ci": "0.4.1",
     "cozy-client": "33.0.6",
     "cozy-client-js": "0.19.0",
