chore(.bundlemonrc): Set maxPercentIncrease to 0.4
By copy svg icon to make it public, it increase 0.35 the public bundle. After discussing with the maintainer, we chose to increase limit for all bundle for future usage.

--- a/.bundlemonrc
+++ b/.bundlemonrc
@@ -113,27 +113,27 @@
   "groups": [
     {
       "path": "drive/app/**",
-      "maxPercentIncrease": 0.1
+      "maxPercentIncrease": 0.4
     },
     {
       "path": "drive/img/**",
-      "maxPercentIncrease": 0.1
+      "maxPercentIncrease": 0.4
     },
     {
       "path": "drive/intents/**",
-      "maxPercentIncrease": 0.1
+      "maxPercentIncrease": 0.4
     },
     {
       "path": "drive/onlyOffice/**",
-      "maxPercentIncrease": 0.1
+      "maxPercentIncrease": 0.4
     },
     {
       "path": "drive/public/**",
-      "maxPercentIncrease": 0.1
+      "maxPercentIncrease": 0.4
     },
     {
       "path": "drive/screenshots/**",
-      "maxPercentIncrease": 0.1
+      "maxPercentIncrease": 0.4
     },
     {
       "path": "drive/services/**",
@@ -141,8 +141,10 @@
     },
     {
       "path": "drive/vendors/**",
-      "maxPercentIncrease": 0.1
+      "maxPercentIncrease": 0.4
     }
   ],
-  "reportOutput": ["github"]
+  "reportOutput": [
+    "github"
+  ]
 }
