fix: Files with sharing are deleted correctly for cozy-stack
Upgrade cozy-client to get : https://github.com/cozy/cozy-client/pull/1105

--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "cozy-authentication": "2.10.10",
     "cozy-bar": "7.21.0",
     "cozy-ci": "0.4.1",
-    "cozy-client": "33.4.0",
+    "cozy-client": "^34.1.4",
     "cozy-client-js": "0.20.0",
     "cozy-device-helper": "^2.5.0",
     "cozy-doctypes": "1.85.4",
@@ -125,12 +125,12 @@
     "cozy-intent": "^1.17.1",
     "cozy-keys-lib": "4.1.9",
     "cozy-logger": "1.9.1",
-    "cozy-pouch-link": "33.4.0",
+    "cozy-pouch-link": "^34.1.4",
     "cozy-realtime": "3.14.4",
     "cozy-scanner": "2.4.6",
     "cozy-scripts": "^6.3.8",
     "cozy-sharing": "4.1.5",
-    "cozy-stack-client": "33.4.0",
+    "cozy-stack-client": "^34.1.4",
     "cozy-ui": "74.4.2",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
