--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
     "react-measure": "2.5.0",
     "react-redux": "7.2.0",
     "react-remove-scroll": "^2.4.4",
-    "react-router": "3.2.6",
+    "react-router-dom": "6.6.0",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
     "redux-mock-store": "1.5.4",
