feat: Move search from cozy-bar to cozy-drive
Before, the search input was into cozy-bar and the search logic into cozy-drive. They were contacting through intent and postMessage. This commit bring everything in the same place in cozy-drive.

--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "propagating-hammerjs": "^2.0.1",
     "raven-js": "3.27.2",
     "react": "16.14.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "16.14.0",
     "react-dropzone": "5.1.1",
     "react-hot-loader": "^4.13.1",
