--- a/.tx/config
+++ b/.tx/config
@@ -1,14 +1,14 @@
 [main]
 host = https://www.transifex.com
 
-[cozy-drive.global]
+[o:cozy:p:cozy-drive:r:global]
 file_filter = src/drive/locales/<lang>.json
 source_file = src/drive/locales/en.json
 source_lang = en
-type = KEYVALUEJSON
+type        = KEYVALUEJSON
 
-[cozy-photos-v3.global]
+[o:cozy:p:cozy-photos-v3:r:global]
 file_filter = src/photos/locales/<lang>.json
 source_file = src/photos/locales/en.json
 source_lang = en
-type = KEYVALUEJSON
+type        = KEYVALUEJSON
