--- a/package.json
+++ b/package.json
@@ -82,14 +82,16 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "8.0.1",
+    "@types/react-redux": "7.1.26",
     "@welldone-software/why-did-you-render": "^6.1.4",
-    "babel-core": "7.0.0-bridge.0",
+    "babel-preset-cozy-app": "2.1.0",
     "babel-runtime": "^6.26.0",
     "bundlemon": "1.3.1",
     "chrome-remote-interface": "0.31.2",
     "cordova": "8.1.2",
     "cordova-android": "9.1.0",
     "cozy-jobs-cli": "^2.1.0",
+    "cozy-tsconfig": "1.2.0",
     "css-mediaquery": "^0.1.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
