--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "cozy-scripts": "^8.1.0",
     "cozy-sharing": "8.3.0",
     "cozy-stack-client": "^40.0.1",
-    "cozy-ui": "^90.0.0",
+    "cozy-ui": "91.2.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
