fix: Add terser plugin
There is a conflict on the terser plugin since we added
storybook to harvest it was impossible to build the drive
app.

In order to avoid this issue, I did same process as Crash on home. I ran
a yarn why terser-webpack-plugin

And install the same version as the one from cozy-scripts

--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "testcafe": "2.0.2",
     "unzipper": "0.10.11",
     "visualreview-client": "git+https://github.com/cozy/VisualReview-node-client.git#v0.0.4",
-    "worker-loader": "2.0.0"
+    "worker-loader": "2.0.0",
+    "terser-webpack-plugin": "1.4.5"
   },
   "dependencies": {
     "@cozy/minilog": "1.0.0",
