--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "mui-bottom-sheet": "https://github.com/cozy/mui-bottom-sheet.git#v1.0.6",
     "node-fetch": "2.6.7",
     "node-polyglot": "2.4.2",
+    "p-limit": "2.3.0",
     "popper.js": "1.16.1",
     "pouchdb-adapter-cordova-sqlite": "^2.0.7",
     "pouchdb-adapter-idb": "7.2.2",
