--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:js": "eslint '{src,test}/**/*.{js,jsx}'",
     "testcafe:drive": "node testcafe/runner-drive.js",
     "testcafe:photos": "node testcafe/runner-photos.js",
-    "test": "env NODE_ENV='test' cozy-scripts test",
+    "test": "env NODE_ENV='test' jest",
     "genicon:drive:mobile": "(cd src/drive/targets/mobile && rm -Rf ./res/icons ./res/screens && splashicon-generator --imagespath='./res/model' && cp res/model/splash.png res/screens/ios/Default@2x~universal~anyany.png)",
     "prepare:drive:mobile": "(cd src/drive/targets/mobile && rm -rf platforms && rm -rf plugins && cordova prepare)",
     "run:drive:android": "(cd src/drive/targets/mobile && cordova run android --device )",
@@ -84,6 +84,7 @@
     "@testing-library/react-hooks": "8.0.1",
     "@types/react-redux": "7.1.26",
     "@welldone-software/why-did-you-render": "^6.1.4",
+    "babel-jest": "29.7.0",
     "babel-preset-cozy-app": "2.1.0",
     "bundlemon": "1.3.1",
     "chrome-remote-interface": "0.31.2",
@@ -98,7 +99,8 @@
     "eslint-config-cozy-app": "4.0.0",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
-    "jest-environment-jsdom-sixteen": "^2.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "npm-run-all": "4.1.5",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.14.0",
@@ -115,7 +117,6 @@
   "dependencies": {
     "@cozy/minilog": "1.0.0",
     "@egjs/hammerjs": "^2.0.17",
-    "babel-jest": "29.7.0",
     "classnames": "2.3.1",
     "copy-text-to-clipboard": "1.0.4",
     "cozy-authentication": "2.10.10",
@@ -141,7 +142,6 @@
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
     "filesize": "3.6.1",
-    "jest": "^24.9.0",
     "justified-layout": "2.1.2",
     "kd-tree-javascript": "1.0.3",
     "localforage": "1.10.0",
