chore: Update Travis configuration to track release tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ node-preset: &node # Used internally to share configuration, ignored by travis.
 branches:
   only:
     - master
-    # detect also branch like release/x.y.z or release/x.y.z-beta.n
-    - /^release\/\d+\.\d+\.\d+(\-beta.\d+)?$/
+     # detect also tag like x.y.z or x.y.z-beta.n as travis consider them to be branches
+    - /^\d+\.\d+\.\d+(\-beta.\d+)?$/
 stages:
   - prebuild
   - build
