--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "run:drive:ios:emulator": "(cd src/drive/targets/mobile && cordova run ios --buildFlag='-UseModernBuildSystem=0' --emulator)",
     "publish:drive:ios": "yarn build:drive:mobile && (cd src/drive/targets/mobile && fastlane ios pushtest)",
     "sentry:drive:mobile": "sentry-cli releases -o sentry -p cozy-drive-v3 files $npm_package_version upload-sourcemaps ./src/drive/targets/mobile/www",
-    "version": "yarn version:drive & yarn version:photos",
+    "version": "yarn version:drive",
     "version:drive:manifest": "replace '\\d+\\.\\d+\\.\\d+' $npm_package_version ./src/drive/targets/manifest.webapp",
     "version:drive:mobilePackage": "replace '\"version\": \"\\d+\\.\\d+\\.\\d+\"' '\"version\": \"'$npm_package_version'\"' ./src/drive/targets/mobile/package.json",
     "version:drive:config": "replace 'version=\"\\d+\\.\\d+\\.\\d+\"' 'version=\"'$npm_package_version'\"' ./src/drive/targets/mobile/config.xml",
@@ -50,7 +50,6 @@
     "version:drive:androidbuild": "perl -pi -e 's,android-versionCode=\"[0-9]+\",android-versionCode=\"'`echo ${npm_package_version} | tr -d .`'0000\",g' ./src/drive/targets/mobile/config.xml",
     "version:drive:useragent": "replace 'value=\"(.+)\\d+\\.\\d+\\.\\d+\"' 'value=\"$1'$npm_package_version'\"' ./src/drive/targets/mobile/config.xml",
     "version:drive": "npm-run-all --parallel 'version:drive:*'",
-    "version:photos": "replace '\\d+\\.\\d+\\.\\d+' $npm_package_version ./src/photos/targets/manifest.webapp",
     "service:drive": "yarn cozy-konnector-dev -m src/photos/targets/manifest.webapp",
     "service:photos": "yarn cozy-konnector-dev -m src/photos/targets/manifest.webapp"
   },
