--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "cozy-authentication": "2.10.10",
     "cozy-bar": "10.0.0",
     "cozy-ci": "0.5.2",
-    "cozy-client": "^44.0.0",
+    "cozy-client": "^45.0.1",
     "cozy-client-js": "0.20.0",
     "cozy-device-helper": "^2.5.0",
     "cozy-doctypes": "1.85.4",
@@ -124,8 +124,8 @@
     "cozy-scanner": "^7.0.1",
     "cozy-scripts": "^8.1.0",
     "cozy-sharing": "10.0.1",
-    "cozy-stack-client": "^44.0.0",
-    "cozy-ui": "93.1.1",
+    "cozy-stack-client": "^45.0.1",
+    "cozy-ui": "^99.0.2",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "fastclick": "1.0.6",
