chore: Handle node 16/node 20 at the same time
Since we're stuck on webpack 4 ATM because of cozy-scripts,
we need to fallback to --openssl-legacy-provider for crypto
stuff.

But this node option is only available for node 17+. So we've
to wrap our cozy-scripts call to a script that check the node
version and add or not the option

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.65.0",
   "main": "src/main.jsx",
   "scripts": {
-    "build": "cozy-scripts build --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
-    "build:drive:mobile": "cozy-scripts build --mobile --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
-    "watch": "cozy-scripts watch --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
-    "watch:drive:mobile": "NODE_ENV=mobile:development cozy-scripts watch --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
-    "start": "cozy-scripts start --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
-    "start:drive:mobile": "NODE_ENV=mobile:development  cozy-scripts start  --mobile --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
-    "start:drive:standalone": "NODE_ENV=mobile:development cozy-scripts start  --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
+    "build": "node define_node_option.js cozy-scripts build --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
+    "build:drive:mobile": "node define_node_option.js cozy-scripts build --mobile --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
+    "watch": "node define_node_option.js cozy-scripts watch --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
+    "watch:drive:mobile": "NODE_ENV=mobile:development node define_node_option.js cozy-scripts watch --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
+    "start": "node define_node_option.js cozy-scripts start --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
+    "start:drive:mobile": "NODE_ENV=mobile:development node define_node_option.js cozy-scripts start  --mobile --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
+    "start:drive:standalone": "NODE_ENV=mobile:development node define_node_option.js  cozy-scripts start  --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
     "deploy": "cozy-app-publish --token $REGISTRY_TOKEN --build-dir 'build/drive/' --prepublish downcloud --postpublish mattermost",
     "tx": "tx pull --all || true",
     "lint": "npm-run-all --parallel 'lint:*'",
