--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,79 @@
   "rules": {
     "no-console": 1,
     "no-param-reassign": "error",
-    "react-hooks/exhaustive-deps": "error"
+    "react-hooks/exhaustive-deps": "error",
+    "import/order": [
+      "warn",
+      {
+        "alphabetize": { "order": "asc" },
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          ["parent", "sibling", "index"]
+        ],
+        "pathGroups": [
+          {
+            "pattern": "{cozy-*,cozy-*/**}",
+            "group": "internal",
+            "position": "after"
+          },
+          {
+            "pattern": "**/*.styl",
+            "group": "index",
+            "position": "after"
+          },
+          {
+            "pattern": "test/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "lib/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "hooks/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "components/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "modules/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "assets/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "models/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "config/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "constants/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "config/**/*",
+            "group": "index"
+          },
+          {
+            "pattern": "locales/**/*",
+            "group": "index"
+          }
+        ],
+        "distinctGroup": true,
+        "pathGroupsExcludedImportTypes": ["{cozy-*,cozy-*/**}"],
+        "newlines-between": "always",
+        "warnOnUnassignedImports": true
+      }
+    ]
   },
   "globals": {
     "fixture": false
@@ -20,6 +92,7 @@
         "react/display-name": "off"
       }
     }
+
   ],
   "parserOptions": {
     "project": "tsconfig.json"
