--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
   },
   "homepage": "https://github.com/cozy/cozy-drive#readme",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@sentry/cli": "1.72.1",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "8.0.1",
     "@types/react-redux": "7.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@welldone-software/why-did-you-render": "^6.1.4",
     "babel-jest": "29.7.0",
     "babel-preset-cozy-app": "2.1.0",
@@ -55,16 +58,26 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "enzyme-to-json": "3.6.2",
+    "eslint": "^8.35.0",
     "eslint-config-cozy-app": "6.1.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "0.14.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "npm-run-all": "4.1.5",
+    "prettier": "^2.8.4",
     "react-test-renderer": "16.14.0",
     "replace": "1.2.1",
     "stylint": "1.5.9",
     "terser-webpack-plugin": "1.4.5",
+    "typescript": "^4.9.5",
     "worker-loader": "2.0.0"
   },
   "dependencies": {
