refactor: Move locales folder at src root

--- a/.tx/config
+++ b/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 
 [o:cozy:p:cozy-drive:r:e8e90edbf54aede8b7b026659d6fe40a]
-file_filter = src/drive/locales/<lang>.json
-source_file = src/drive/locales/en.json
+file_filter = src/locales/<lang>.json
+source_file = src/locales/en.json
 source_lang = en
 type        = KEYVALUEJSON
