refactor: Remove mobile script into package.json

--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "main": "src/main.jsx",
   "scripts": {
     "build": "cozy-scripts build --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
-    "build:drive:mobile": "cozy-scripts build --mobile --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
     "watch": "cozy-scripts watch --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
-    "watch:drive:mobile": "NODE_ENV=mobile:development cozy-scripts watch --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
     "start": "cozy-scripts start --manifest src/drive/targets/manifest.webapp --build-dir build/drive --src-dir src/drive --barV7 false --cozyClientJs",
-    "start:drive:mobile": "NODE_ENV=mobile:development  cozy-scripts start  --mobile --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
-    "start:drive:standalone": "NODE_ENV=mobile:development cozy-scripts start  --manifest src/drive/targets/manifest.webapp --src-dir src/drive --barV7 false --cozyClientJs",
     "deploy": "cozy-app-publish --token $REGISTRY_TOKEN --build-dir 'build/drive/' --prepublish downcloud --postpublish mattermost",
     "tx": "tx pull --all || true",
     "lint": "npm-run-all --parallel 'lint:*'",
@@ -17,29 +13,8 @@
     "lint:js": "eslint '{src,test}/**/*.{js,jsx}'",
     "testcafe:drive": "node testcafe/runner-drive.js",
     "test": "env NODE_ENV='test' jest",
-    "genicon:drive:mobile": "(cd src/drive/targets/mobile && rm -Rf ./res/icons ./res/screens && splashicon-generator --imagespath='./res/model' && cp res/model/splash.png res/screens/ios/Default@2x~universal~anyany.png)",
-    "prepare:drive:mobile": "(cd src/drive/targets/mobile && rm -rf platforms && rm -rf plugins && cordova prepare)",
-    "run:drive:android": "(cd src/drive/targets/mobile && cordova run android --device )",
-    "run:drive:android:emulator": "(cd src/drive/targets/mobile && cordova run android --emulator )",
-    "build:drive:android": "(cd src/drive/targets/mobile && cordova build android --release )",
-    "build:drive:android:debug": "(cd src/drive/targets/mobile && cordova build android --debug )",
-    "sign:drive:android": "(cd src/drive/targets/mobile && mkdir -p build/android && apksigner sign --ks keys/android/cozy-drive-release-key.jks --out build/android/cozy-drive.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
-    "autosign:drive:android": "(cd src/drive/targets/mobile && mkdir -p build/android && apksigner sign --ks keys/android/cozy-drive-release-key.jks --ks-pass env:ANDROID_KEYSTORE_PASS --out build/android/cozy-drive.apk platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk)",
-    "buildsigned:drive:android": "yarn build:drive:android && yarn sign:drive:android",
-    "publish:drive:android": "yarn build:drive:mobile && yarn buildsigned:drive:android && (cd src/drive/targets/mobile && fastlane android pushbeta)",
-    "publishbeta:drive:android": "(cd src/drive/targets/mobile && fastlane android pushbeta)",
-    "run:drive:ios": "(cd src/drive/targets/mobile && cordova run ios --buildFlag='-UseModernBuildSystem=0' --device)",
-    "run:drive:ios:emulator": "(cd src/drive/targets/mobile && cordova run ios --buildFlag='-UseModernBuildSystem=0' --emulator)",
-    "publish:drive:ios": "yarn build:drive:mobile && (cd src/drive/targets/mobile && fastlane ios pushtest)",
-    "sentry:drive:mobile": "sentry-cli releases -o sentry -p cozy-drive-v3 files $npm_package_version upload-sourcemaps ./src/drive/targets/mobile/www",
-    "version": "yarn version:drive",
-    "version:drive:manifest": "replace '\\d+\\.\\d+\\.\\d+' $npm_package_version ./src/drive/targets/manifest.webapp",
-    "version:drive:mobilePackage": "replace '\"version\": \"\\d+\\.\\d+\\.\\d+\"' '\"version\": \"'$npm_package_version'\"' ./src/drive/targets/mobile/package.json",
-    "version:drive:config": "replace 'version=\"\\d+\\.\\d+\\.\\d+\"' 'version=\"'$npm_package_version'\"' ./src/drive/targets/mobile/config.xml",
-    "version:drive:iosbuild": "replace 'CFBundleVersion=\"\\d+\\.\\d+\\.\\d+.\\d+\"' 'CFBundleVersion=\"'$npm_package_version'.0\"' ./src/drive/targets/mobile/config.xml",
-    "version:drive:androidbuild": "perl -pi -e 's,android-versionCode=\"[0-9]+\",android-versionCode=\"'`echo ${npm_package_version} | tr -d .`'0000\",g' ./src/drive/targets/mobile/config.xml",
-    "version:drive:useragent": "replace 'value=\"(.+)\\d+\\.\\d+\\.\\d+\"' 'value=\"$1'$npm_package_version'\"' ./src/drive/targets/mobile/config.xml",
-    "version:drive": "npm-run-all --parallel 'version:drive:*'",
+    "version": "yarn version:manifest",
+    "version:manifest": "replace '\\d+\\.\\d+\\.\\d+' $npm_package_version ./src/drive/targets/manifest.webapp",
     "service": "yarn cozy-konnector-dev -m src/drive/targets/manifest.webapp"
   },
   "repository": {
